updates links, background and text

--- a/static/style.css
+++ b/static/style.css
@@ -6,10 +6,10 @@ body {
   color: white; /* Set the color of the text to make it visible on the background */
   font-family: 'Quicksand', sans-serif;
   text-align: center;
-  background-image: url(background.jpg);
+  /*background-image: url(background.jpg);*/
 }
 
-.header {
+header {
   display: flex; /*property creates a flex container*/
   flex-direction: column; /*stacks the content of this class underneath*/
   justify-content: center;
@@ -21,12 +21,12 @@ body {
   white-space: nowrap; /* Prevents text from breaking into multiple lines */
 }
 
-.list {
-  text-align: center;
-  padding: 0;
-}
-
-.list a {
+a {
   color: white;
   text-decoration: none;
+}
+
+footer {
+  margin-top: 10vw;
+  font-size: 10px;
 }
