--- a/static/style.css
+++ b/static/style.css
@@ -6,22 +6,36 @@ body {
   color: white; /* Set the color of the text to make it visible on the background */
   font-family: 'Yantramanav', sans-serif;
   text-align: center;
-  justify-content: center;
   background-image: url(/static/backgrounds/beach_blurred.jpg);
+  background-size: cover;
+}
+
+.container {
+  display: flex;
+  justify-content: space-between;
 }
 
 nav {
   background-color: rgba(255,228,196,0.3);
+  height: 300px;
+  /*most important CSS stuff*/
+  display: flex; /*always*/
+  justify-content: space-between; /*center is nicest, space-between*/
+  align-items: start; /*start, center, end*/
+  flex-direction: row; /*row by default, row-reverse*/
+  flex-wrap: wrap; /*nowrap by default, generally wrap*/
+  gap: 2.5rem;
+  /*most important CSS stuff, border, padding, margin*/
+  padding: 1rem;
+  border: 1px solid black;
+  border-radius: 50%;
   }
 
-nav ul {
-  list-style-type: none;
-  display: table;
-}
-
-nav li {
-  display: table-cell;
-  padding: 15px
+.profile {
+  width: 10rem; 
+  height: auto;
+  border-radius: 50%;
+  border: 2px solid white;
 }
 
 a {
@@ -34,4 +48,8 @@ footer {
   margin-top: 10vw;
   font-size: 10px;
   color: #0a0112;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 8rem;
 }
