--- a/static/style.css
+++ b/static/style.css
@@ -194,12 +194,36 @@ nav li a:hover {
     font-size: 1.3em;
     text-shadow: 1px 2px 2px #c57b57ff;
 }
+.time-line::before {
+    content: "";
+    height: 100%;
+    width: 1.7px;
+    position: absolute;
+    left: 4%;
+    background-image: linear-gradient(#53462BFF, #53462B00);
+}
+.time-line {
+    margin-top: 3%;
+    padding-left: 10%;
+    position: relative;
+}
+.position {
+    padding: 12px;
+    width: 70%;
+    border: 1px solid hsla(41, 32%, 25%, 0);
+}
+.position h4 {
+    margin-top: 3%;
+}
+.position:hover {
+    background-color: hsla(49, 25%, 83%, 0.6);
+    border: 1px solid hsla(41, 32%, 25%, 0.2);
+    border-radius: 15px;
+    box-shadow: 30px 30px 80px #262119FF;
+ }
 #experience ul li {
     list-style: disc;
-    width: 60%;
 }
-
-
 /* --------------- Section: Education --------------- */
                                                             /* TODO: improve this toggle behavior using hidden checkbox input*/
 .collapse li {
@@ -220,7 +244,7 @@ nav li a:hover {
     cursor: pointer;
 }
 .collapse h4 {
-    margin-top: 4%;
+    margin-top: 13px;
 }
 .collapse h4:hover {
     text-shadow: 1px 0px 3px #c57b57ff;
