--- a/static/style.css
+++ b/static/style.css
@@ -149,15 +149,38 @@ nav li a:hover {
 
 .project-grid {
     padding: 0 2%;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 5% 2%;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: flex-start;
+    align-items: stretch;
 }
 .project-grid li {
     background-color: hsla(64, 34%, 59%, 0.6);
+    border: 1px solid hsla(41, 32%, 25%, 0);
     border-radius: 11%;
-    padding: 0.5em;
-    padding-top: 0.8em;
+    padding: 2% 1.4%;
+    margin: 2%;
+    min-width: 200px;
+    flex-basis: 200px;
+}
+.project-grid li:hover {
+    position: relative;
+    bottom: 4px;
+    background-color: hsla(64, 34%, 59%, 0.6);
+    border: 1px solid hsla(41, 32%, 25%, 0.2);
+    border-radius: 15px;
+    box-shadow: 30px 30px 80px #262119FF;
+}
+.project-grid span {
+    background-color: hsla(0, 0%, 50%, 0.3);
+    border-radius: 4px;
+    padding: 1%;
+}
+.project-grid small, p {
+    text-align: left;
+    padding: 2%;
+}
+.project-title {
     font-family: "Give You Glory";
     font-size: 1.1rem;
     text-align: center;
@@ -216,6 +239,8 @@ nav li a:hover {
     margin-top: 3%;
 }
 .position:hover {
+    position: relative;
+    bottom: 4px;
     background-color: hsla(49, 25%, 83%, 0.6);
     border: 1px solid hsla(41, 32%, 25%, 0.2);
     border-radius: 15px;
