--- a/static/style.css
+++ b/static/style.css
@@ -93,6 +93,14 @@ header h2 {
     padding: 2%;
     margin: 2% 0;
 }
+@media only screen and (max-width: 600px) {
+    header h1{
+    font-size: 2.3rem;
+    }
+    header h2{
+        font-size: 1.23rem;
+    }
+}
 /* --------------- Nav --------------- */
 
 nav {
@@ -116,7 +124,7 @@ nav li a:hover {
     border-top: 2px solid #262119ff;
     border-bottom: 2px solid #262119ff;
 }
-@media screen and (max-width: 600px) {
+@media only screen and (max-width: 600px) {
     nav ol {
         display: flex;
         flex-direction: column;
